# llaut-mus-tournament

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
app/: __init__.py  database.py  main.py  models.py
app/routes/: pairs.py  predictions.py  stats.py  tournament.py  users.py
app/static/css/: styles.css
app/templates/: base.html  home.html  leaderboard.html  pairs.html  users.html
frontend/: fly.toml  package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: Header.js
frontend/src/pages/: Leaderboard.js  Pairs.js  Users.js
tests/: test_delete_pair.py  test_pairs.py  test_predictions.py  test_register_match_result.py  test_stats.py  test_tournament.py  test_update_user_stats.py  test_users.py
